2004-10-15  MenTaLguY  <mental@rydia.net>

	* src/sp-item.cpp, src/sp-style.cpp: basic support for visibility CSS
	  property

2004-10-14  Ted Gould  <ted@gould.cx>

	* share/extension/*.inkmod -> *.inx
	src/extension/init.cpp

	Changing the filename extension that is used to identify Inkscape
	extensions to the one specified in the design document.

2004-10-14  MenTaLguY  <mental@rydia.net>

	* src/util/list.h: more 3.4 fixes

2004-10-13  MenTaLguY  <mental@rydia.net>

	* src/util/list.h, src/util/forward-pointer-iterator.h:

	  fixes to (hopefully) build with g++ 3.4 (and generally be less evil
	  anyway)

2004-10-14  Carl Hetherington <inkscape@carlh.net>

	* src/Path.cpp, src/Path.h, src/PathConversion.cpp,
	src/PathCutting.cpp, src/PathOutline.cpp, src/PathSimplify.cpp,
	src/ShapeMisc.cpp: use a vector of pointers for Path::descr_cmd.

	* src/livarot/Ligne.cpp, src/livarot/Ligne.h,
	src/livarot/int-line.cpp, src/livarot/int-line.h,
	src/livarot/float-line.cpp, src/livarot/float-line.h,
	src/livarot/livarot-forward.h, src/livarot/ShapeRaster.cpp,
	src/sp-flowregion.cpp, src/display/canvas-bpath.cpp,
	src/display/nr-arena-glyphs.cpp, src/display/nr-arena-shape.cpp,
	src/display/sp-ctrlline.cpp, src/libnrtype/FlowDest.cpp,
	src/libnrtype/RasterFont.cpp: split Ligne into float-line and
	int-line.

	* src/libnrtype/FlowDest.cpp, src/libnrtype/RasterFont.cpp,
	src/libnrtype/raster-position.h, src/livarot/float-line.cpp,
	src/livarot/float-line.h, src/livarot/int-line.cpp: use
	std::vector for arrays in FloatLigne.

	* src/livarot/float-line.cpp, src/livarot/float-line.h: remove
	lots of dead code.  Make some methods private.

2004-10-12  MenTaLguY  <mental@rydia.net>

	* src/Makefile.am: added files

	* src/layer-fns.cpp, src/sp-item.cpp: use iterators, simplifying code

	* src/sp-object.cpp, src/splivarot.cpp: adapt to new version of 
	  Inkscape::Algorithms::longest_common_suffix

	* src/sp-object.h, src/sp-repr-iterators.h: add new iterator classes
