@@ -102,6 +102,9 @@ struct SPItem : public SPObject {
 
 	sigc::signal<void, NR::Matrix const *, SPItem *> _transformed_signal;
 
+	bool isLocked() const;
+	bool isHidden(unsigned display_key) const;
+
 	NR::Matrix getRelativeTransform(SPObject const *obj) const;
 
 	void raiseOne();
