@@ -1,5 +1,13 @@
 2004-10-15  MenTaLguY  <mental@rydia.net>
 
+	* src/attributes.h: remove unused #define
+
+	* src/sp-object.cpp: fix for bug #1048268 (inkscape:collect being written
+	  in "plain SVG" files)
+
+	* src/sp-item.h, src/sp-item.cpp: added isLocked() and isHidden()
+	  predicates
+
 	* src/sp-item.cpp, src/sp-style.cpp: basic support for visibility CSS
 	  property
 
